--- a/source/Gemfile
+++ b/source/Gemfile
@@ -40,6 +40,7 @@ gem "twitter-bootstrap-rails"
 
 group :development, :test do
   gem 'rspec-rails', '~> 2.0'
+  gem 'capybara'
 end
 
 # Use ActiveModel has_secure_password
